disburse popup feild spacing fixed

--- a/src/app/pages/dashboards/disburse-cash/disburse-cash.component.scss
+++ b/src/app/pages/dashboards/disburse-cash/disburse-cash.component.scss
@@ -56,6 +56,7 @@ form {
 }
 
 .identical {
+  position: absolute;
   font-size: 11px;
   text-align: center;
 }
